<resources>
    <string name="api_version">Version: 1.0.0</string>
    <string name="last_loaded">Última carga:</string>
    <string name="last_loaded_value">Última carga:</string>
    <string name="app_name">ChartierApp</string>
    <string name="plate_layout">Chapas</string>
    <string name="steel_layout">Acero Inoxidable</string>
    <string name="tray_layout">Bandeja</string>
    <string name="table_layout">Forrar Mesa</string>
    <string name="width">Ancho</string>
    <string name="quantity">Cantidad</string>
    <string name="length">Largo</string>
    <string name="thickness">Espesor</string>
    <string name="nombre">Nombre</string>
    <string name="metric_hint">0 m</string>
    <string name="unit_hint">0</string>
    <string name="list_input_default">Seleccione</string>
    <string name="splash_screen_title">Datos sin cargar</string>
    <string name="splash_screen_dialog">Antes de empezar carguemos la información necesaria.</string>
    <string name="delete_screen_dialog">Esta acción borrará todos los datos de la app.\n¿Desea continuar?</string>
    <string name="load_btn">CARGAR</string>
    <string name="cancel_btn">CANCELAR</string>
    <string name="delete_btn">BORRAR</string>
    <string name="calc_btn">CALCULAR</string>
    <string name="ignore_btn">IGNORAR</string>
    <string name="results_title">Resultado</string>
    <string name="results_default">Ingrese los valores y presione calcular.</string>
    <bool name="loaded_data_key">false</bool>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>