<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/background_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/paragraph_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete_screen_dialog"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cancel_btn"
        android:background="@drawable/button"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraph_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:textSize="15sp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:letterSpacing=".1"
        app:layout_constraintLeft_toLeftOf="@+id/cancel_btn"
        app:layout_constraintRight_toRightOf="@+id/cancel_btn"
        app:layout_constraintTop_toTopOf="@+id/cancel_btn"
        app:layout_constraintBottom_toBottomOf="@id/cancel_btn" />

    <View
        android:id="@+id/delete_btn_container"
        android:layout_width="150dp"
        android:layout_height="79dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_btn" />


    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/text_secondary"
        app:layout_constraintLeft_toLeftOf="@+id/delete_btn_container"
        app:layout_constraintRight_toRightOf="@+id/delete_btn_container"
        app:layout_constraintTop_toTopOf="@+id/delete_btn_container"
        app:layout_constraintBottom_toBottomOf="@+id/delete_btn_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>