<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoadDataActivity">

    <View
        android:id="@+id/helper1"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        app:layout_constraintBottom_toTopOf="parent" />
    <View
        android:id="@+id/helper2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="parent" />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="686dp"
        android:layout_height="624dp"
        android:background="@drawable/ellipse_1"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/helper1" />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="721dp"
        android:layout_height="375dp"
        android:background="@drawable/ellipse_2"
        android:layout_marginStart="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/helper2" />

    <View
        android:id="@+id/backdrop_ba"
        android:layout_width="match_parent"
        android:layout_height="574dp"
        android:background="@drawable/backdrop_ba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <View
        android:id="@+id/ic_circle"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:background="@drawable/ic_circle"
        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/backdrop_ba" />
    <View
        android:id="@+id/ic_file"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_file"
        app:layout_constraintLeft_toLeftOf="@+id/ic_circle"
        app:layout_constraintRight_toRightOf="@+id/ic_circle"
        app:layout_constraintTop_toTopOf="@+id/ic_circle"
        app:layout_constraintBottom_toBottomOf="@+id/ic_circle" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_circle"
        android:text="@string/splash_screen_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/inter_bold" />

    <TextView
        android:id="@+id/paragraph_text"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/splash_screen_dialog"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <View
        android:id="@+id/load_btn"
        android:background="@drawable/button"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paragraph_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_btn"
        android:textSize="15sp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:letterSpacing=".1"
        app:layout_constraintLeft_toLeftOf="@+id/load_btn"
        app:layout_constraintRight_toRightOf="@+id/load_btn"
        app:layout_constraintTop_toTopOf="@+id/load_btn"
        app:layout_constraintBottom_toBottomOf="@id/load_btn" />

    <TextView
        android:id="@+id/ignore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignore_btn"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="32sp"
        app:layout_constraintLeft_toLeftOf="@id/backdrop_ba"
        app:layout_constraintRight_toRightOf="@id/backdrop_ba"
        app:layout_constraintTop_toBottomOf="@id/load_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>